tdf#120152: fix adding labels in reportdesign

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=4b4942224b550235da228655677b5c068a053254

Change-Id: I7935f11e82410574e64cf3d50ea4e2e3791f0487