svx/source/inc/fmvwimp.hxx
@@ -263,6 +263,8 @@ private:
 
         // tdf#118963 Need a SdrModel for SdrObject creation. To make the
         // demand clear, hand over a SdrMldel&
+        SdrPage* _pLabelPage,
+        SdrPage* _pControlPage,
         SdrModel& _rModel,
 
         std::unique_ptr<SdrUnoObj, SdrObjectFreeOp>& _rpLabel,
